Fix header zero height bug on Safari

--- a/css/sass/layout/_portfolio-sidebar.scss
+++ b/css/sass/layout/_portfolio-sidebar.scss
@@ -25,7 +25,7 @@
     background-color: c('white');
     border-left: 1px solid c('black');
     display: block;
-    height: 100%;
+    //height: 100%;
 
     @include breakpoint--small {
       border: none;
