--- a/css/style.css
+++ b/css/style.css
@@ -525,7 +525,7 @@ article ul li:not(:last-child), article ol li:not(:last-child) { margin-bottom: 
 
 @media only screen and (max-width: 880px) { .page-template-portfolio-sidebar #pageContent .content:not(.has-grid) img, .page-template-portfolio-sidebar #pageContent .content:not(.has-grid) figure { width: 100%; } }
 
-.page-template-portfolio-sidebar.page-child #pageContent { background-color: #ffffff; border-left: 1px solid #363636; display: block; height: 100%; }
+.page-template-portfolio-sidebar.page-child #pageContent { background-color: #ffffff; border-left: 1px solid #363636; display: block; }
 
 @media only screen and (max-width: 599px) { .page-template-portfolio-sidebar.page-child #pageContent { border: none; } }
 
@@ -611,7 +611,7 @@ header { font-family: "Khand", "Arial Narrow", sans-serif; color: #363636; posit
 
 .page-child #sidebarNav { background-color: #ffffff; padding-bottom: 0px; }
 
-@media only screen and (max-width: 599px) { .page-child #sidebarNav { height: unset; width: 100%; } }
+@media only screen and (max-width: 599px) { .page-child #sidebarNav { -webkit-box-flex: 0; -ms-flex: 0 0 auto; flex: 0 0 auto; height: auto; width: 100%; } }
 
 @media only screen and (max-width: 599px) { .page-child #sidebarNav header { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; } }
 
